working on graphs

--- a/pyber_ju.ipynb
+++ b/pyber_ju.ipynb
@@ -36,7 +36,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
        "      <td>Urban</td>\n",
@@ -45,7 +45,7 @@
        "      <td>5628545007794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
        "      <td>Urban</td>\n",
@@ -54,7 +54,7 @@
        "      <td>910050116494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
        "      <td>Urban</td>\n",
@@ -63,7 +63,7 @@
        "      <td>820639054416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
        "      <td>Urban</td>\n",
@@ -72,7 +72,7 @@
        "      <td>9554935945413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
        "      <td>Urban</td>\n",
@@ -104,6 +104,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import plotly\n",
+    "import plotly.graph_objs as go\n",
     "\n",
     "# File to Load (Remember to change these)\n",
     "city_data =  (\"data/city_data.csv\")\n",
@@ -116,6 +118,46 @@
     "# Display the data table for preview\n",
     "city_ride_data.head()\n",
     "                                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rides_total = city_ride_data.groupby(['type', 'city'], as_index=False)['ride_id'].count()\n",
+    "rides_total = rides_total.sort_values(['type', 'ride_id'], ascending=[True, False]).groupby('type').head()\n",
+    "\n",
+    "fare_avg = city_ride_data.groupby(['type', 'city'], as_index=False)['fare'].mean()\n",
+    "avg_fare = fare_avg.sort_values(['type', 'fare'], ascending=[True, False]).groupby('type').head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Length of ascending (2) != length of by (1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-f279fa40e8c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcity_rides_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcity_ride_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'city'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mas_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'driver_count'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtotal_city_drivers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcity_rides_total\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'city'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'driver_count'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36msort_values\u001b[0;34m(self, by, axis, ascending, inplace, kind, na_position)\u001b[0m\n\u001b[1;32m   4979\u001b[0m             raise ValueError(\n\u001b[1;32m   4980\u001b[0m                 \u001b[0;34m\"Length of ascending (%d) != length of by (%d)\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4981\u001b[0;31m                 \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4982\u001b[0m             )\n\u001b[1;32m   4983\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Length of ascending (2) != length of by (1)"
+     ]
+    }
+   ],
+   "source": [
+    "city_rides_total = city_ride_data.groupby(['city'],as_index=False)['driver_count'].sum()\n",
+    "total_city_drivers = city_rides_total.sort_values(['city'], ascending=[True, False]).groupby('driver_count').head()\n",
+    "\n",
+    "                                         \n",
+    "\n"
    ]
   },
   {
@@ -285,6 +327,13 @@
     "                    \n",
     "by_city_df.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
