--- a/Finished_pyber.ipynb
+++ b/Finished_pyber.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "[66 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -547,74 +547,6 @@
        "data": [
         {
          "hoverinfo": "text",
-         "hovertext": [
-          24.641666666666666,
-          25.332272727272724,
-          28.314444444444437,
-          24.50185185185185,
-          25.842631578947366,
-          23.75793103448276,
-          24.906666666666666,
-          25.2212,
-          28.993749999999995,
-          25.89142857142857,
-          25.649200000000004,
-          26.78571428571428,
-          22.2896,
-          23.694333333333322,
-          26.340000000000003,
-          27.453571428571433,
-          24.84423076923077,
-          23.425833333333333,
-          23.809166666666666,
-          21.243809523809524,
-          26.149999999999995,
-          25.2925,
-          22.65125,
-          26.765555555555558,
-          22.589000000000002,
-          27.820000000000004,
-          21.67590909090909,
-          23.49409090909091,
-          25.20533333333333,
-          22.743714285714287,
-          22.623599999999996,
-          27.504285714285718,
-          23.98047619047619,
-          23.836842105263155,
-          25.854999999999997,
-          27.201515151515153,
-          23.006363636363638,
-          25.64280000000001,
-          21.4804,
-          21.919473684210526,
-          22.373214285714287,
-          23.72916666666666,
-          23.0605,
-          28.616956521739127,
-          22.097727272727273,
-          20.570666666666668,
-          23.355833333333337,
-          26.72612903225806,
-          22.965263157894736,
-          26.535526315789475,
-          20.093157894736848,
-          24.451612903225808,
-          28.57129032258064,
-          24.636363636363637,
-          25.990000000000002,
-          24.736666666666665,
-          24.421153846153842,
-          22.34722222222222,
-          20.34608695652174,
-          23.133928571428573,
-          21.72038461538461,
-          28.233124999999994,
-          25.123870967741937,
-          21.7676,
-          24.36217391304348,
-          26.599
-         ],
          "marker": {
           "color": "rosybrown",
           "size": [
@@ -1620,20 +1552,20 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"063a9450-12d4-4fe8-a83b-2c7e50bce749\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"5a694545-2683-439c-bb1a-c2820f15dbf1\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    \n",
-       "                if (document.getElementById(\"063a9450-12d4-4fe8-a83b-2c7e50bce749\")) {\n",
+       "                if (document.getElementById(\"5a694545-2683-439c-bb1a-c2820f15dbf1\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '063a9450-12d4-4fe8-a83b-2c7e50bce749',\n",
-       "                        [{\"hoverinfo\": \"text\", \"hovertext\": [24.641666666666666, 25.332272727272724, 28.314444444444437, 24.50185185185185, 25.842631578947366, 23.75793103448276, 24.906666666666666, 25.2212, 28.993749999999995, 25.89142857142857, 25.649200000000004, 26.78571428571428, 22.2896, 23.694333333333322, 26.340000000000003, 27.453571428571433, 24.84423076923077, 23.425833333333333, 23.809166666666666, 21.243809523809524, 26.149999999999995, 25.2925, 22.65125, 26.765555555555558, 22.589000000000002, 27.820000000000004, 21.67590909090909, 23.49409090909091, 25.20533333333333, 22.743714285714287, 22.623599999999996, 27.504285714285718, 23.98047619047619, 23.836842105263155, 25.854999999999997, 27.201515151515153, 23.006363636363638, 25.64280000000001, 21.4804, 21.919473684210526, 22.373214285714287, 23.72916666666666, 23.0605, 28.616956521739127, 22.097727272727273, 20.570666666666668, 23.355833333333337, 26.72612903225806, 22.965263157894736, 26.535526315789475, 20.093157894736848, 24.451612903225808, 28.57129032258064, 24.636363636363637, 25.990000000000002, 24.736666666666665, 24.421153846153842, 22.34722222222222, 20.34608695652174, 23.133928571428573, 21.72038461538461, 28.233124999999994, 25.123870967741937, 21.7676, 24.36217391304348, 26.599], \"marker\": {\"color\": \"rosybrown\", \"size\": [18, 22, 27, 27, 19, 29, 12, 25, 24, 28, 25, 21, 25, 30, 17, 28, 26, 24, 24, 21, 33, 28, 24, 18, 30, 19, 22, 22, 30, 35, 25, 14, 21, 19, 22, 33, 22, 25, 25, 19, 28, 24, 20, 23, 22, 30, 24, 31, 19, 38, 19, 31, 31, 22, 39, 30, 26, 18, 23, 28, 26, 16, 31, 25, 23, 20]}, \"mode\": \"markers\", \"type\": \"scatter\", \"x\": [18, 22, 27, 27, 19, 29, 12, 25, 24, 28, 25, 21, 25, 30, 17, 28, 26, 24, 24, 21, 33, 28, 24, 18, 30, 19, 22, 22, 30, 35, 25, 14, 21, 19, 22, 33, 22, 25, 25, 19, 28, 24, 20, 23, 22, 30, 24, 31, 19, 38, 19, 31, 31, 22, 39, 30, 26, 18, 23, 28, 26, 16, 31, 25, 23, 20], \"y\": [24.641666666666666, 25.332272727272724, 28.314444444444437, 24.50185185185185, 25.842631578947366, 23.75793103448276, 24.906666666666666, 25.2212, 28.993749999999995, 25.89142857142857, 25.649200000000004, 26.78571428571428, 22.2896, 23.694333333333322, 26.340000000000003, 27.453571428571433, 24.84423076923077, 23.425833333333333, 23.809166666666666, 21.243809523809524, 26.149999999999995, 25.2925, 22.65125, 26.765555555555558, 22.589000000000002, 27.820000000000004, 21.67590909090909, 23.49409090909091, 25.20533333333333, 22.743714285714287, 22.623599999999996, 27.504285714285718, 23.98047619047619, 23.836842105263155, 25.854999999999997, 27.201515151515153, 23.006363636363638, 25.64280000000001, 21.4804, 21.919473684210526, 22.373214285714287, 23.72916666666666, 23.0605, 28.616956521739127, 22.097727272727273, 20.570666666666668, 23.355833333333337, 26.72612903225806, 22.965263157894736, 26.535526315789475, 20.093157894736848, 24.451612903225808, 28.57129032258064, 24.636363636363637, 25.990000000000002, 24.736666666666665, 24.421153846153842, 22.34722222222222, 20.34608695652174, 23.133928571428573, 21.72038461538461, 28.233124999999994, 25.123870967741937, 21.7676, 24.36217391304348, 26.599]}],\n",
+       "                        '5a694545-2683-439c-bb1a-c2820f15dbf1',\n",
+       "                        [{\"hoverinfo\": \"text\", \"marker\": {\"color\": \"rosybrown\", \"size\": [18, 22, 27, 27, 19, 29, 12, 25, 24, 28, 25, 21, 25, 30, 17, 28, 26, 24, 24, 21, 33, 28, 24, 18, 30, 19, 22, 22, 30, 35, 25, 14, 21, 19, 22, 33, 22, 25, 25, 19, 28, 24, 20, 23, 22, 30, 24, 31, 19, 38, 19, 31, 31, 22, 39, 30, 26, 18, 23, 28, 26, 16, 31, 25, 23, 20]}, \"mode\": \"markers\", \"type\": \"scatter\", \"x\": [18, 22, 27, 27, 19, 29, 12, 25, 24, 28, 25, 21, 25, 30, 17, 28, 26, 24, 24, 21, 33, 28, 24, 18, 30, 19, 22, 22, 30, 35, 25, 14, 21, 19, 22, 33, 22, 25, 25, 19, 28, 24, 20, 23, 22, 30, 24, 31, 19, 38, 19, 31, 31, 22, 39, 30, 26, 18, 23, 28, 26, 16, 31, 25, 23, 20], \"y\": [24.641666666666666, 25.332272727272724, 28.314444444444437, 24.50185185185185, 25.842631578947366, 23.75793103448276, 24.906666666666666, 25.2212, 28.993749999999995, 25.89142857142857, 25.649200000000004, 26.78571428571428, 22.2896, 23.694333333333322, 26.340000000000003, 27.453571428571433, 24.84423076923077, 23.425833333333333, 23.809166666666666, 21.243809523809524, 26.149999999999995, 25.2925, 22.65125, 26.765555555555558, 22.589000000000002, 27.820000000000004, 21.67590909090909, 23.49409090909091, 25.20533333333333, 22.743714285714287, 22.623599999999996, 27.504285714285718, 23.98047619047619, 23.836842105263155, 25.854999999999997, 27.201515151515153, 23.006363636363638, 25.64280000000001, 21.4804, 21.919473684210526, 22.373214285714287, 23.72916666666666, 23.0605, 28.616956521739127, 22.097727272727273, 20.570666666666668, 23.355833333333337, 26.72612903225806, 22.965263157894736, 26.535526315789475, 20.093157894736848, 24.451612903225808, 28.57129032258064, 24.636363636363637, 25.990000000000002, 24.736666666666665, 24.421153846153842, 22.34722222222222, 20.34608695652174, 23.133928571428573, 21.72038461538461, 28.233124999999994, 25.123870967741937, 21.7676, 24.36217391304348, 26.599]}],\n",
        "                        {\"template\": {\"data\": {\"bar\": [{\"error_x\": {\"color\": \"#2a3f5f\"}, \"error_y\": {\"color\": \"#2a3f5f\"}, \"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"bar\"}], \"barpolar\": [{\"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"barpolar\"}], \"carpet\": [{\"aaxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"baxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"type\": \"carpet\"}], \"choropleth\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"choropleth\"}], \"contour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"contour\"}], \"contourcarpet\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"contourcarpet\"}], \"heatmap\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmap\"}], \"heatmapgl\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmapgl\"}], \"histogram\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"histogram\"}], \"histogram2d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2d\"}], \"histogram2dcontour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2dcontour\"}], \"mesh3d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"mesh3d\"}], \"parcoords\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"parcoords\"}], \"scatter\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter\"}], \"scatter3d\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter3d\"}], \"scattercarpet\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattercarpet\"}], \"scattergeo\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergeo\"}], \"scattergl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergl\"}], \"scattermapbox\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattermapbox\"}], \"scatterpolar\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolar\"}], \"scatterpolargl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolargl\"}], \"scatterternary\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterternary\"}], \"surface\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"surface\"}], \"table\": [{\"cells\": {\"fill\": {\"color\": \"#EBF0F8\"}, \"line\": {\"color\": \"white\"}}, \"header\": {\"fill\": {\"color\": \"#C8D4E3\"}, \"line\": {\"color\": \"white\"}}, \"type\": \"table\"}]}, \"layout\": {\"annotationdefaults\": {\"arrowcolor\": \"#2a3f5f\", \"arrowhead\": 0, \"arrowwidth\": 1}, \"colorscale\": {\"diverging\": [[0, \"#8e0152\"], [0.1, \"#c51b7d\"], [0.2, \"#de77ae\"], [0.3, \"#f1b6da\"], [0.4, \"#fde0ef\"], [0.5, \"#f7f7f7\"], [0.6, \"#e6f5d0\"], [0.7, \"#b8e186\"], [0.8, \"#7fbc41\"], [0.9, \"#4d9221\"], [1, \"#276419\"]], \"sequential\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"sequentialminus\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]]}, \"colorway\": [\"#636efa\", \"#EF553B\", \"#00cc96\", \"#ab63fa\", \"#FFA15A\", \"#19d3f3\", \"#FF6692\", \"#B6E880\", \"#FF97FF\", \"#FECB52\"], \"font\": {\"color\": \"#2a3f5f\"}, \"geo\": {\"bgcolor\": \"white\", \"lakecolor\": \"white\", \"landcolor\": \"#E5ECF6\", \"showlakes\": true, \"showland\": true, \"subunitcolor\": \"white\"}, \"hoverlabel\": {\"align\": \"left\"}, \"hovermode\": \"closest\", \"mapbox\": {\"style\": \"light\"}, \"paper_bgcolor\": \"white\", \"plot_bgcolor\": \"#E5ECF6\", \"polar\": {\"angularaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"radialaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"scene\": {\"xaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"yaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"zaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}}, \"shapedefaults\": {\"line\": {\"color\": \"#2a3f5f\"}}, \"ternary\": {\"aaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"baxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"caxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"title\": {\"x\": 0.05}, \"xaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}, \"yaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}}}},\n",
        "                        {\"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('063a9450-12d4-4fe8-a83b-2c7e50bce749');\n",
+       "var gd = document.getElementById('5a694545-2683-439c-bb1a-c2820f15dbf1');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -1669,7 +1601,9 @@
    "source": [
     "fig = go.Figure()\n",
     "\n",
-    "fig.add_trace(go.Scatter(x=total_urban, y=avg_urban,  hovertext=avg_urban, hoverinfo= \"text\",\n",
+    "                 \n",
+    "                 \n",
+    "fig.add_trace(go.Scatter(x=Urban[\"Total City rides\"], y=Urban[\"Average Fare\"], hoverinfo= \"text\",\n",
     "                         \n",
     "                         marker=dict(size=total_urban, color='rosybrown'),\n",
     "                 \n",
