update main code

--- a/rideanalysis.ipynb
+++ b/rideanalysis.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "# Rename colums \n",
     "Rides_total= rides_total.rename({'ride_id':'total rides'},axis=1)\n",
-    "Avg_fare = avg_fare.rename({'fare':'average fare'},axis=1)\n",
+    "Avg_fare = avg_fareipynb\n",
     "Driver_total= driver_total.rename({'driver_count':'Total Drivers'},axis=1)"
    ]
   },
